--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 
 </head>
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-
-<script src="coke.js"></script>
+ 
 
 
 <nav class="navbar navbar-expand-lg fixed-top " id="nav-color">
@@ -68,6 +65,8 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide "></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -78,6 +77,12 @@
     </div>
     <div class="carousel-item">
       <img src="images/width38ds40.jpg.webp" class="d-block w-100 img-fluid" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/width3dd840.jpg.webp" class="d-block w-100 img-fluid" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="images/width38s40.jpg.webp" class="d-block w-100 img-fluid" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -200,7 +205,7 @@
 
 <section class=" py-5">
   <div class="container text-center">
-      <h1 class="fw-bold mb-5">Say "Hi" to the Team</h1>
+      <h1 class="fw-bold mb-5" >Say "Hi" to the Team</h1>
 
       <div class="row justify-content-center g-5">
 
@@ -288,6 +293,10 @@
   </div>
   </footer>
 
+ <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+
+<script src="coke.js"></script>
 
 </body>
 </html>
